--- a/style.css
+++ b/style.css
@@ -211,7 +211,9 @@
           height: 350px;
           /* border:1px #de2830 solid; */
           border:1px #da1a32 solid;
+          display: flex;
      }
+
      .red-text{
          color:#dd0e31;
      }
@@ -220,6 +222,9 @@
           width:100%;
           height:130px;
           object-fit: none;
+     }
+     .tool-container{
+      width: 50%;
      }
      .card-content{
           width:100%;
